package ar.edu.utn.frba.dds.servicioEstadisticas.domain.models;

public class Hecho {
    Coleccion coleccion;
    Provincia provincia;
    Categoria categoria;
    HoraDelDia hora;
    Integer cantidad_hechos;
}
